lex/PatitoParser.py
# Generated from Patito.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


import pprint
import sys



class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'if'", "'print'", "','", 
                     "'else'", "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'", "<INVALID>", "'='", "'('", "')'", "<INVALID>", 
                     "'{'", "'}'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "FLOAT", "MAS", "MENOS", 
                      "MULT", "DIV", "CMP", "IGUAL", "PA", "PC", "CTESTRING", 
                      "LLA", "LLC", "PUNTOCOMA", "ID", "IGN" ]

    RULE_programa = 0
    RULE_bloque = 1
    RULE_estatuto = 2
    RULE_asignacion = 3
    RULE_expresion = 4
    RULE_expresionaux = 5
    RULE_condicion = 6
    RULE_escritura = 7
    RULE_exporstring = 8
    RULE_escrituraaux = 9
    RULE_exp = 10
    RULE_signo = 11
    RULE_termino = 12
    RULE_terminoaux = 13
    RULE_factor = 14
    RULE_factoraux = 15
    RULE_varcte = 16
    RULE_elsex = 17

    ruleNames =  [ "programa", "bloque", "estatuto", "asignacion", "expresion", 
                   "expresionaux", "condicion", "escritura", "exporstring", 
                   "escrituraaux", "exp", "signo", "termino", "terminoaux", 
                   "factor", "factoraux", "varcte", "elsex" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    INT=6
    FLOAT=7
    MAS=8
    MENOS=9
    MULT=10
    DIV=11
    CMP=12
    IGUAL=13
    PA=14
    PC=15
    CTESTRING=16
    LLA=17
    LLC=18
    PUNTOCOMA=19
    ID=20
    IGN=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def PUNTOCOMA(self):
            return self.getToken(PatitoParser.PUNTOCOMA, 0)

        def bloque(self):
            return self.getTypedRuleContext(PatitoParser.BloqueContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PatitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(PatitoParser.T__0)
            self.state = 37
            self.match(PatitoParser.ID)
            self.state = 38
            self.match(PatitoParser.PUNTOCOMA)
            self.state = 39
            self.bloque()
            print("Accepted")
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(PatitoParser.LLA, 0)

        def estatuto(self):
            return self.getTypedRuleContext(PatitoParser.EstatutoContext,0)


        def LLC(self):
            return self.getToken(PatitoParser.LLC, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = PatitoParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(PatitoParser.LLA)
            self.state = 43
            self.estatuto()
            self.state = 44
            self.match(PatitoParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EstatutoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(PatitoParser.AsignacionContext,0)


        def estatuto(self):
            return self.getTypedRuleContext(PatitoParser.EstatutoContext,0)


        def condicion(self):
            return self.getTypedRuleContext(PatitoParser.CondicionContext,0)


        def escritura(self):
            return self.getTypedRuleContext(PatitoParser.EscrituraContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = PatitoParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_estatuto)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.asignacion()
                self.state = 47
                self.estatuto()
                pass
            elif token in [PatitoParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.condicion()
                self.state = 50
                self.estatuto()
                pass
            elif token in [PatitoParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.escritura()
                self.state = 53
                self.estatuto()
                pass
            elif token in [PatitoParser.LLC]:
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignacionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def IGUAL(self):
            return self.getToken(PatitoParser.IGUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def PUNTOCOMA(self):
            return self.getToken(PatitoParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = PatitoParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(PatitoParser.ID)
            self.state = 59
            self.match(PatitoParser.IGUAL)
            self.state = 60
            self.expresion()
            self.state = 61
            self.match(PatitoParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpresionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(PatitoParser.ExpContext,0)


        def expresionaux(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionauxContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = PatitoParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.exp()
            self.state = 64
            self.expresionaux()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpresionauxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CMP(self):
            return self.getToken(PatitoParser.CMP, 0)

        def exp(self):
            return self.getTypedRuleContext(PatitoParser.ExpContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_expresionaux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionaux" ):
                listener.enterExpresionaux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionaux" ):
                listener.exitExpresionaux(self)




    def expresionaux(self):

        localctx = PatitoParser.ExpresionauxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expresionaux)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.CMP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(PatitoParser.CMP)
                self.state = 67
                self.exp()
                pass
            elif token in [PatitoParser.T__3, PatitoParser.PC, PatitoParser.PUNTOCOMA]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondicionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PA(self):
            return self.getToken(PatitoParser.PA, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def PC(self):
            return self.getToken(PatitoParser.PC, 0)

        def bloque(self):
            return self.getTypedRuleContext(PatitoParser.BloqueContext,0)


        def elsex(self):
            return self.getTypedRuleContext(PatitoParser.ElsexContext,0)


        def PUNTOCOMA(self):
            return self.getToken(PatitoParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = PatitoParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condicion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(PatitoParser.T__1)
            self.state = 72
            self.match(PatitoParser.PA)
            self.state = 73
            self.expresion()
            self.state = 74
            self.match(PatitoParser.PC)
            self.state = 75
            self.bloque()
            self.state = 76
            self.elsex()
            self.state = 77
            self.match(PatitoParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EscrituraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PA(self):
            return self.getToken(PatitoParser.PA, 0)

        def exporstring(self):
            return self.getTypedRuleContext(PatitoParser.ExporstringContext,0)


        def escrituraaux(self):
            return self.getTypedRuleContext(PatitoParser.EscrituraauxContext,0)


        def PC(self):
            return self.getToken(PatitoParser.PC, 0)

        def PUNTOCOMA(self):
            return self.getToken(PatitoParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)




    def escritura(self):

        localctx = PatitoParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_escritura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PatitoParser.T__2)
            self.state = 80
            self.match(PatitoParser.PA)
            self.state = 81
            self.exporstring()
            self.state = 82
            self.escrituraaux()
            self.state = 83
            self.match(PatitoParser.PC)
            self.state = 84
            self.match(PatitoParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExporstringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def CTESTRING(self):
            return self.getToken(PatitoParser.CTESTRING, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_exporstring

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExporstring" ):
                listener.enterExporstring(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExporstring" ):
                listener.exitExporstring(self)




    def exporstring(self):

        localctx = PatitoParser.ExporstringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exporstring)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.INT, PatitoParser.FLOAT, PatitoParser.MAS, PatitoParser.MENOS, PatitoParser.PA, PatitoParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.expresion()
                pass
            elif token in [PatitoParser.CTESTRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(PatitoParser.CTESTRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EscrituraauxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exporstring(self):
            return self.getTypedRuleContext(PatitoParser.ExporstringContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_escrituraaux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscrituraaux" ):
                listener.enterEscrituraaux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscrituraaux" ):
                listener.exitEscrituraaux(self)




    def escrituraaux(self):

        localctx = PatitoParser.EscrituraauxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_escrituraaux)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(PatitoParser.T__3)
                self.state = 91
                self.exporstring()
                pass
            elif token in [PatitoParser.PC]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(PatitoParser.TerminoContext,0)


        def signo(self):
            return self.getTypedRuleContext(PatitoParser.SignoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = PatitoParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.termino()
            self.state = 96
            self.signo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAS(self):
            return self.getToken(PatitoParser.MAS, 0)

        def exp(self):
            return self.getTypedRuleContext(PatitoParser.ExpContext,0)


        def MENOS(self):
            return self.getToken(PatitoParser.MENOS, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_signo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigno" ):
                listener.enterSigno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigno" ):
                listener.exitSigno(self)




    def signo(self):

        localctx = PatitoParser.SignoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_signo)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.MAS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(PatitoParser.MAS)
                self.state = 99
                self.exp()
                pass
            elif token in [PatitoParser.MENOS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(PatitoParser.MENOS)
                self.state = 101
                self.exp()
                pass
            elif token in [PatitoParser.T__3, PatitoParser.CMP, PatitoParser.PC, PatitoParser.PUNTOCOMA]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerminoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(PatitoParser.FactorContext,0)


        def terminoaux(self):
            return self.getTypedRuleContext(PatitoParser.TerminoauxContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)




    def termino(self):

        localctx = PatitoParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_termino)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.factor()
            self.state = 106
            self.terminoaux()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerminoauxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULT(self):
            return self.getToken(PatitoParser.MULT, 0)

        def factor(self):
            return self.getTypedRuleContext(PatitoParser.FactorContext,0)


        def DIV(self):
            return self.getToken(PatitoParser.DIV, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_terminoaux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminoaux" ):
                listener.enterTerminoaux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminoaux" ):
                listener.exitTerminoaux(self)




    def terminoaux(self):

        localctx = PatitoParser.TerminoauxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_terminoaux)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.MULT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(PatitoParser.MULT)
                self.state = 109
                self.factor()
                pass
            elif token in [PatitoParser.DIV]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(PatitoParser.DIV)
                self.state = 111
                self.factor()
                pass
            elif token in [PatitoParser.T__3, PatitoParser.MAS, PatitoParser.MENOS, PatitoParser.CMP, PatitoParser.PC, PatitoParser.PUNTOCOMA]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PA(self):
            return self.getToken(PatitoParser.PA, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def PC(self):
            return self.getToken(PatitoParser.PC, 0)

        def factoraux(self):
            return self.getTypedRuleContext(PatitoParser.FactorauxContext,0)


        def varcte(self):
            return self.getTypedRuleContext(PatitoParser.VarcteContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = PatitoParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_factor)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.PA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(PatitoParser.PA)
                self.state = 116
                self.expresion()
                self.state = 117
                self.match(PatitoParser.PC)
                pass
            elif token in [PatitoParser.INT, PatitoParser.FLOAT, PatitoParser.MAS, PatitoParser.MENOS, PatitoParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.factoraux()
                self.state = 120
                self.varcte()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorauxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAS(self):
            return self.getToken(PatitoParser.MAS, 0)

        def MENOS(self):
            return self.getToken(PatitoParser.MENOS, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_factoraux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactoraux" ):
                listener.enterFactoraux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactoraux" ):
                listener.exitFactoraux(self)




    def factoraux(self):

        localctx = PatitoParser.FactorauxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_factoraux)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.MAS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(PatitoParser.MAS)
                pass
            elif token in [PatitoParser.MENOS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(PatitoParser.MENOS)
                pass
            elif token in [PatitoParser.INT, PatitoParser.FLOAT, PatitoParser.ID]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarcteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def INT(self):
            return self.getToken(PatitoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(PatitoParser.FLOAT, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_varcte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarcte" ):
                listener.enterVarcte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarcte" ):
                listener.exitVarcte(self)




    def varcte(self):

        localctx = PatitoParser.VarcteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_varcte)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PatitoParser.INT) | (1 << PatitoParser.FLOAT) | (1 << PatitoParser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElsexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(PatitoParser.BloqueContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_elsex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsex" ):
                listener.enterElsex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsex" ):
                listener.exitElsex(self)




    def elsex(self):

        localctx = PatitoParser.ElsexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_elsex)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(PatitoParser.T__4)
                self.state = 132
                self.bloque()
                pass
            elif token in [PatitoParser.PUNTOCOMA]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





